[gd_scene load_steps=20 format=3 uid="uid://dx4k3d7kc1rb4"]

[ext_resource type="Script" uid="uid://olelfvfj2gra" path="res://entities/player/player.gd" id="1_bbgll"]
[ext_resource type="Texture2D" uid="uid://bf8rw0n6mkr2f" path="res://entities/player/char_blue_1.png" id="2_g1fbt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_be7c1"]
radius = 19.0
height = 94.0

[sub_resource type="AtlasTexture" id="AtlasTexture_hgmd0"]
atlas = ExtResource("2_g1fbt")
region = Rect2(0, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6baw"]
atlas = ExtResource("2_g1fbt")
region = Rect2(56, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rq0a"]
atlas = ExtResource("2_g1fbt")
region = Rect2(112, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_va4g6"]
atlas = ExtResource("2_g1fbt")
region = Rect2(168, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxkfl"]
atlas = ExtResource("2_g1fbt")
region = Rect2(224, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtfj4"]
atlas = ExtResource("2_g1fbt")
region = Rect2(280, 0, 56, 68)

[sub_resource type="AtlasTexture" id="AtlasTexture_abrql"]
atlas = ExtResource("2_g1fbt")
region = Rect2(0, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_sglur"]
atlas = ExtResource("2_g1fbt")
region = Rect2(56, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_bls4j"]
atlas = ExtResource("2_g1fbt")
region = Rect2(112, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkugw"]
atlas = ExtResource("2_g1fbt")
region = Rect2(168, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fjmc"]
atlas = ExtResource("2_g1fbt")
region = Rect2(224, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiwj3"]
atlas = ExtResource("2_g1fbt")
region = Rect2(280, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_26q78"]
atlas = ExtResource("2_g1fbt")
region = Rect2(336, 112, 56, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_bectd"]
atlas = ExtResource("2_g1fbt")
region = Rect2(392, 112, 56, 56)

[sub_resource type="SpriteFrames" id="SpriteFrames_yqy5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgmd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6baw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rq0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va4g6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxkfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtfj4")
}],
"loop": true,
"name": &"idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_abrql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sglur")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bls4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkugw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fjmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26q78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bectd")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_abrql"]
radius = 122.066

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource("1_bbgll")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_be7c1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5, -22)
scale = Vector2(2.98438, 2.98438)
sprite_frames = SubResource("SpriteFrames_yqy5e")
animation = &"idle"

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -76.0
offset_right = 19.0
offset_bottom = -52.0
text = "HP:"

[node name="Label2" type="Label" parent="."]
offset_left = -20.0
offset_top = 44.0
offset_right = 20.0
offset_bottom = 67.0
text = "Coins:"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Magnitarea" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Magnitarea"]
shape = SubResource("CircleShape2D_abrql")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Magnitarea" to="." method="_on_magnitarea_area_entered"]
